# terapialaskut

./: .gitignore  LICENSE  README.md  customer.py  pdf_writer.py  pyproject.toml  requirements.txt  sql_base.py  therapist.py  therapist_page.py  visits_page.py
therapy/: custom_tree_widget.py  customers_page.py  person.py  sql_base.py  therapy.py  visit.py
