[tool.poetry]
name = "therapy"
version = "0.1.0"
description = ""
authors = ["Rami Rahikkala <rami.rahikkala@fluentia.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pypdf2 = "^1.27.9"
pyside2 = "5.15.2.1"
sqlalchemy = "1.3.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

